--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,8 +11,8 @@ build: off  # будем использовать свой скрипт сбор
 install:
   # добавления прав на запуск файла gradlew
   - chmod +x gradlew
-  # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
-  - java -jar ./artifacts/app-mbank.jar &
+  # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов). В данной задаче запуск SUT не нужен.
+  #- java -jar ./artifacts/app-mbank.jar &
 
 build_script:
   - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
